--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.QuickBoxFront" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme_QuickBox_Front" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:windowBackground">@color/white</item>
     </style>
-
-    <style name="Theme.QuickBoxFront" parent="Base.Theme.QuickBoxFront" />
+    <style name="ButtonStyle"   parent="Widget.Material3.Button.TextButton" >
+        <item name="android:backgroundTint">@color/purplelight</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="Theme.QuickBoxFront" parent="Theme_QuickBox_Front" />
     <style name="Theme.QuickBoxFront.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
