home screen first

--- a/app/src/main/res/layout/carousel.xml
+++ b/app/src/main/res/layout/carousel.xml
@@ -3,16 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#005199C6">
+    android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/Item1"
+        android:id="@+id/image1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#2B9DCC"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/quickbox_logo"
-        android:contentDescription="@string/logo" />
+        android:contentDescription="image1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
