--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme_QuickBox_Front" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.QuickBoxFront" parent="Theme.Material3.DayNight.NoActionBar">
 <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/black</item>
+        <item name="android:colorPrimaryDark">@color/purpledark</item>
+        <item name="android:colorSecondary">@color/purpledark</item>
+        <item name="android:textColorPrimary">@color/white</item>
     </style>
 </resources>
