--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,19 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme_QuickBox_Front" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
+    <style name="Theme.QuickBoxFront" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:windowBackground">@color/white</item>
+        <item name="android:colorPrimary">@color/purplelight</item>
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:colorAccent">@color/purplelight</item>
+        <item name="android:colorSecondary">@color/purplelight</item>
+        <!-- Button Attributes -->
+        <item name="android:buttonStyle">@style/MyButtonStyle</item>
     </style>
-    <style name="ButtonStyle"   parent="Widget.Material3.Button.TextButton" >
+
+    <style name="MyButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/purplelight</item>
-        <item name="android:textColor">@color/white</item>
     </style>
-    <style name="Theme.QuickBoxFront" parent="Theme_QuickBox_Front" />
-    <style name="Theme.QuickBoxFront.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-    <style name="Theme.QuickBoxFront.AppBarOverlay"
-        parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-    <style name="Theme.QuickBoxFront.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
