--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="purplelight">#3F51B5</color>
     <color name="purpledark">#B1AAF3</color>
+    <color name="orange">#FBAD31</color>
 
 </resources>
