--- a/app/src/main/res/layout-land/home.xml
+++ b/app/src/main/res/layout-land/home.xml
@@ -6,77 +6,83 @@
     android:layout_height="match_parent"
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="385dp"
-        android:layout_height="332dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/round_corners"
-        android:contentDescription="@string/map"
-        android:scaleType="fitCenter"
-        android:src="@drawable/map2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="250dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
         android:background="#FCAC32"
-        android:scaleType="fitStart"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/logo"
+        android:scaleType="fitEnd"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        motion:srcCompat="@drawable/quickbox_logo"
-        android:contentDescription="@string/logo" />
+        motion:srcCompat="@drawable/quickbox_logo" />
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="56dp"
-        android:background="#FBAB32"
-        android:backgroundTint="#FBAB32"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="16dp"
+        android:background="#00FBAB32"
+        android:backgroundTint="#00DBDBDB"
         android:contentDescription="@string/avatar"
         android:scaleType="centerCrop"
         android:src="@drawable/avatar"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/logo"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars"
         tools:visibility="visible" />
 
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="250dp"
+        android:layout_height="380dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/round_corners"
+        android:contentDescription="@string/map"
+        android:scaleType="centerCrop"
+        android:src="@drawable/quickbox_logo"
+        app:layout_constraintStart_toEndOf="@+id/viewPager"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="340dp"
+        android:layout_height="160dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="140dp"
+        android:background="@drawable/round_corners"
+        app:layout_constraintStart_toEndOf="@+id/logo"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="invisible">
+
     </androidx.viewpager.widget.ViewPager>
 
     <Button
         android:id="@+id/createdel"
-        android:layout_width="360dp"
+        android:layout_width="340dp"
         android:layout_height="70dp"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="24dp"
         android:text="@string/create_delivery"
         android:textAlignment="center"
         android:textSize="28dp"
-        app:layout_constraintBottom_toTopOf="@+id/viewPager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo"
+        app:layout_constraintStart_toEndOf="@+id/logo"
+        app:layout_constraintTop_toBottomOf="@+id/viewPager"
         tools:ignore="VisualLintButtonSize" />
+
+    <TextView
+        android:id="@+id/nameH"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="52dp"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/imageButton"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
