--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -5,17 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ProgressBar
-        android:id="@+id/progressBarUp"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="156dp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
-
     <ImageView
         android:id="@+id/logo"
         android:layout_width="411dp"
@@ -45,7 +34,6 @@
         android:layout_width="310dp"
         android:layout_height="50dp"
         android:layout_marginTop="36dp"
-        android:layout_marginBottom="75dp"
         android:ems="10"
         android:hint="@string/enter_your_password"
         android:hyphenationFrequency="normal"
@@ -53,7 +41,6 @@
         android:inputType="textPassword"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/signinB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -137,5 +124,18 @@
         app:layout_constraintEnd_toStartOf="@+id/signupB"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signinB" />
+
+    <ProgressBar
+        android:id="@+id/progressBarUp"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="156dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.761"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
