--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -5,17 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ProgressBar
-        android:id="@+id/progressBarUp"
-        android:layout_width="95dp"
-        android:layout_height="95dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="44dp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/street" />
-
     <Button
         android:id="@+id/backB"
         android:layout_width="wrap_content"
@@ -166,5 +155,17 @@
         app:layout_constraintStart_toEndOf="@+id/street"
         app:layout_constraintTop_toBottomOf="@+id/city"
         android:importantForAutofill="no" />
+
+    <ProgressBar
+        android:id="@+id/progressBarUp"
+        android:layout_width="95dp"
+        android:layout_height="95dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="44dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/street"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
